prevent layout jump when play again button is displayed

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     gap: clamp(.5rem, 0.8rem, 1rem);
     min-height: 100dvh;
@@ -91,7 +91,7 @@ div p {
 }
 
 #playAgain {
-    display: none;
+    opacity: 0;
     width: 100%;
     font-size: larger;
     font-weight: 800;
